# cosmic-ext-applet-cargowatch

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
i18n/en/: cosmic_ext_applet_cargowatch.ftl
res/: com.vintagetechie.CosmicExtAppletCargoWatch.desktop  com.vintagetechie.CosmicExtAppletCargoWatch.metainfo.xml
src/: applet.rs  config.rs  i18n.rs  main.rs  space.rs  udisks.rs
