[package]
name = "cosmic-ext-applet-cargowatch"
version = "0.0.1"
edition = "2021"
authors = ["VintageTechie <john@vintagetechie.com>"]
license = "GPL-3.0-only"
description = "Disk space monitor applet for COSMIC Desktop"

[dependencies]
anyhow = "1.0"
i18n-embed-fl = "0.9.1"
nix = { version = "0.29", features = ["fs"] }
notify-rust = "4"
open = "5.3.0"
rust-embed = "8.5.0"
serde = { version = "1.0", features = ["derive"] }
zbus = "5"


[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

# # Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }

[package.metadata.deb]
license-file = "LICENSE"
assets = [
    ["target/release/cosmic-ext-applet-cargowatch", "usr/bin/", "755"],
    ["res/com.vintagetechie.CosmicExtAppletCargoWatch.desktop", "usr/share/applications/", "644"],
    ["res/com.vintagetechie.CosmicExtAppletCargoWatch.metainfo.xml", "usr/share/metainfo/", "644"],
    ["res/icons/hicolor/scalable/apps/com.vintagetechie.CosmicExtAppletCargoWatch.svg", "usr/share/icons/hicolor/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cosmic-ext-applet-cargowatch", dest = "/usr/bin/", mode = "755" },
    { source = "LICENSE", dest = "/usr/share/doc/cosmic-ext-applet-cargowatch/LICENSE", doc = true, mode = "644" },
    { source = "res/*.desktop", dest = "/usr/share/applications/", mode = "644" },
    { source = "res/icons/hicolor/scalable/apps/com.vintagetechie.CosmicExtAppletCargoWatch.svg", dest = "/usr/share/icons/scalable/apps/", mode = "644"},
]

